Segundo commit - Alteração do logo, e da imagem da coruja. Acrescentação do utf-8 que havia esquecido.

--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
 	<!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="">
     
+    <meta charset="utf-8">
     <!-- FavIcon -->
 	<link rel="icon" href="imagens/favicon midnight blue.svg">
  
@@ -15,13 +16,14 @@
 	<div class="container">
 		<header> <!-- ínicio header -->
 			<div class="logo">
-				<img src="imagens/Logo-midnight-blue.svg" height="150px" width="320px;">
+				<img src="imagens/Logo-midnight-blue.svg">
 			</div>
 
 			<nav>
 				<ul class="menu">
+					<li><a href="home.html"><i class="fas fa-graduation-cap fa-1x">HOME</i></a></li>
 					<li><a href="login.html"><i class="fas fa-graduation-cap fa-1x">LOGIN</i></a></li>
-					<li><a href="cadastrar.html"><i class="fas fa-graduation-cap fa-1x">CADASTRE</i></a></li>
+					<li><a href="cadastrar.html"><i class="fas fa-graduation-cap fa-1x">CADASTRE-SE</i></a></li>
 					<li><a href="premium.html"><i class="fas fa-graduation-cap fa-1x">PREMIUM</i></a></li>
 					<li><a href="sobre.html"><i class="fas fa-graduation-cap fa-1x">SOBRE</i></a></li>
 				</ul>
